some fixes to login styles on small devices, removing signin erorrs for ui after leaving login page

--- a/src/components/Login/Login.module.scss
+++ b/src/components/Login/Login.module.scss
@@ -12,9 +12,7 @@
 		max-width: 400px;
 		.title {
 			@include title;
-			margin-bottom: 12px;
-		}
-		.loginForm {
+			text-align: center;
 			margin-bottom: 12px;
 		}
 		.loginBtn {
