--- a/src/components/Login/SignInForm/SignInForm.module.scss
+++ b/src/components/Login/SignInForm/SignInForm.module.scss
@@ -1,1 +1,11 @@
 @import '../../../global-styles';
+
+.loginForm {
+    margin-bottom: 12px;
+    .loginFields {
+        margin-bottom: 8px;
+    }
+    .submitBtn {
+
+    }
+}
